--- a/sidepanel.html
+++ b/sidepanel.html
@@ -8,7 +8,16 @@
     <title>Facebook Comments Retriever</title>
   </head>
   <body>
-    <h1>Get Access Token</h1>
+    <h1>1. Options</h1>
+    <p>First, you need to set the App ID and Page ID.</p>
+    <div style="text-align:center;">
+      <button id="go-to-options" class="myBtn">Go to options</button>
+    </div>
+
+    <hr />
+
+    <h1>2. Get Access Token</h1>
+    <p>Then, you need to get page access token using the Get Access Token button below.</p>
     <div style="margin-bottom: 2em">
       <div style="margin-bottom: 1em">
         <strong>User Access Token</strong>
@@ -22,14 +31,16 @@
 
       <div style="text-align:center;">
         <button id="fb-login" class="myBtn">
-          <strong>Login with Facebook</strong>
+          <strong>Get Access Token</strong>
         </button>
       </div>
     </div>
 
     <hr />
 
-    <h1>Download Comments</h1>
+    <h1>3. Download Comments</h1>
+    <p>Post ID is automatically populated for you using the current tab URL. If it's wrong, edit it.</p>
+    <p>Click button below to start harvesting comments.</p>
 
     <div style="margin-bottom: 2em">
       <div style="margin-bottom: 1em">
